--- a/index.html
+++ b/index.html
@@ -20,10 +20,11 @@
 			<img src="img/logo-white.png" alt="Logo" class="logo" />
 		</div>
 		<div class="text-box">
-			<div class="heading-primary">
+			<h1 class="heading-primary">
 				<span class="heading-primary-main">Outdoors</span>
 				<span class="heading-primary-sub">is where life happens</span>
-			</div>
+			</h1>
+			<a href="#" class="btn btn-white"> Discover our tours </a>
 		</div>
 	</header>
 	<body></body>
