--- a/index.html
+++ b/index.html
@@ -32,13 +32,32 @@
 		</header>
 		<main class="">
 			<section class="section-about">
-				<div class="u-center-text u-margin-bottom-8">
+				<div class="u-center-text u-margin-bottom-big">
 					<h2 class="heading-secondary">
 						Exciting tours for adventurous people
 					</h2>
 				</div>
 				<div class="row">
-					<div class="col-1-of-2">Text content</div>
+					<div class="col-1-of-2">
+						<h3 class="heading-tertiary u-margin-bottom-small">
+							You're going to fall in love with nature
+						</h3>
+						<p class="paragraph">
+							ipsum dolor, sit amet consectetur adipisicing elit. Explicabo
+							magnam voluptate maxime quas temporibus iusto exercitationem
+							quidem ex in. Quam accusamus repellat amet optio! Blanditiis eum
+							placeat est modi adipisci.
+						</p>
+						<h3 class="heading-tertiary u-margin-bottom-small">
+							Live adventures like you never have before
+						</h3>
+						<p class="paragraph">
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit
+							consequatur id sint error minus itaque praesentium ipsum possimus
+							voluptate aperiam earum
+						</p>
+						<a href="#" class="btn-text">Learn more &rarr;</a>
+					</div>
 					<div class="col-1-of-2">Image content</div>
 				</div>
 			</section>
