--- a/index.html
+++ b/index.html
@@ -139,8 +139,18 @@
 						<div class="card">
 							<div class="card__side card__side--front">
 								<div class="card__picture card__picture--1">&nbsp;</div>
-								<div class="card__heading">Heading</div>
-								<div class="card__details">Details</div>
+								<h4 class="card__heading">
+									<span class="card__heading__span--1"> The Sea Explorer </span>
+								</h4>
+								<div class="card__details">
+									<ul>
+										<li>3 days tours</li>
+										<li>Upto 30 people</li>
+										<li>2 tour guides</li>
+										<li>Sleep in cozy hotels</li>
+										<li>Difficulty: easy</li>
+									</ul>
+								</div>
 							</div>
 							<div class="card__side card__side--back card__side--back-1">
 								Back
