--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		</header>
 		<main class="">
 			<section class="section-about">
-				<div class="u-center-text u-margin-bottom-big">
+				<div class="u-center-text u-margin-top-huge">
 					<h2 class="heading-secondary">
 						Exciting tours for adventurous people
 					</h2>
@@ -224,6 +224,61 @@
 				</div>
 				<div class="u-center-text u-margin-top-huge">
 					<a href="#" class="btn btn--green">Discover all tours</a>
+				</div>
+			</section>
+			<section class="section-stories ">
+				<div class="bg-video">
+					<video class="bg-video__content" autoplay muted loop>
+						<source src="img/video.mp4" type="video/mp4" />
+						<source src="img/video.webm" type="video/webm" />
+						Your browser is not supported
+					</video>
+				</div>
+				<div class="u-center-text u-margin-bottom-big">
+					<h2 class="heading-secondary">we make people genuinely happy</h2>
+				</div>
+				<div class="row">
+					<div class="story">
+						<figure class="story__shape">
+							<img src="img/nat-8.jpg" alt="" class="story__img" />
+							<figcaption class="story__caption">Mary Smith</figcaption>
+						</figure>
+						<div class="story__text">
+							<h3 class="heading-tertiary u-margin-bottom-small">
+								I HAD THE BEST WEEK EVER WITH MY FAMILY
+							</h3>
+							<p>
+								Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem
+								vel excepturi quae, aliquid nam itaque numquam unde, repellat
+								aut laborum quaerat! Reprehenderit qui ad facere molestias
+								voluptatum odio quibusdam quod. Lorem ipsum dolor sit, amet
+								consectetur adipisicing elit.
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="story">
+						<figure class="story__shape">
+							<img src="img/nat-9.jpg" alt="" class="story__img" />
+							<figcaption class="story__caption">Jack Wilson</figcaption>
+						</figure>
+						<div class="story__text">
+							<h3 class="heading-tertiary u-margin-bottom-small">
+								Wow! my life is completely different now!
+							</h3>
+							<p>
+								Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem
+								vel excepturi quae, aliquid nam itaque numquam unde, repellat
+								aut laborum quaerat! Reprehenderit qui ad facere molestias
+								voluptatum odio quibusdam quod. Lorem ipsum dolor sit, amet
+								consectetur adipisicing elit.
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="u-center-text u-margin-top-huge">
+					<a href="#" class="btn-text">Read all stories &rarr;</a>
 				</div>
 			</section>
 		</main>
