--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 					<a href="#" class="btn btn--green">Discover all tours</a>
 				</div>
 			</section>
-			<section class="section-stories ">
+			<section class="section-stories">
 				<div class="bg-video">
 					<video class="bg-video__content" autoplay muted loop>
 						<source src="img/video.mp4" type="video/mp4" />
@@ -279,6 +279,39 @@
 				</div>
 				<div class="u-center-text u-margin-top-huge">
 					<a href="#" class="btn-text">Read all stories &rarr;</a>
+				</div>
+			</section>
+			<section class="section-book">
+				<div class="row">
+					<div class="book">
+						<div class="book__form">
+							<form action="#" class="from">
+								<div class="u-margin-bottom-medium">
+									<h2 class="heading-secondary">Start booking now</h2>
+								</div>
+								<div class="form__group">
+									<input
+										type="text"
+										class="form__input"
+										id="name"
+										placeholder="Full Name"
+										required
+									/>
+									<label for="Full Name" class="form__label">Full Name</label>
+								</div>
+								<div class="form__group">
+									<input
+										type="email"
+										class="form__input"
+										id="email"
+										placeholder="Email Address"
+										required
+									/>
+									<label for="Email" class="form__label">Email Address</label>
+								</div>
+							</form>
+						</div>
+					</div>
 				</div>
 			</section>
 		</main>
